--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         }
         stage('Complete') {
             steps {
-                echo 'Job Complete!'
+                echo 'Job Complete from new-pipeline for Multi Branch testing!'
             }
         }
     }
